--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <h1>Úvod do Dungeons & Dragons</h1>
     <nav>
       <ul>
-        <li><a href="index.htm">Domov</a></li>
-        <li><a href="races.htm">Rasy</a></li>
-        <li><a href="classes.htm">Triedy</a></li>
-        <li><a href="weapons.htm">Zbrane</a></li>
-        <li><a href="form.htm">Kontakt</a></li>
+        <li><a href="index.html">Domov</a></li>
+        <li><a href="races.html">Rasy</a></li>
+        <li><a href="classes.html">Triedy</a></li>
+        <li><a href="weapons.html">Zbrane</a></li>
+        <li><a href="form.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
@@ -39,8 +39,7 @@
     <section>
       <h2>Užitočné odkazy</h2>
       <ul>
-        <li><a href="mailto:your@email.com">Napíšte nám e-mail</a></li>
-        <li><a href="files/dnd-guide.pdf" target="_blank">Stiahni PDF príručku</a></li>
+        <li><a href="ranusa@stud.uniza.sk">Napíšte nám e-mail</a></li>
         <li><a href="https://dnd.wizards.com" target="_blank">Oficiálna stránka D&D</a></li>
       </ul>
     </section>
