--- a/weapons.html
+++ b/weapons.html
@@ -11,11 +11,11 @@
     <h1>Zbrane v D&D</h1>
     <nav>
       <ul>
-        <li><a href="index.htm">Domov</a></li>
-        <li><a href="races.htm">Rasy</a></li>
-        <li><a href="classes.htm">Triedy</a></li>
-        <li><a href="weapons.htm">Zbrane</a></li>
-        <li><a href="form.htm">Kontakt</a></li>
+        <li><a href="index.html">Domov</a></li>
+        <li><a href="races.html">Rasy</a></li>
+        <li><a href="classes.html">Triedy</a></li>
+        <li><a href="weapons.html">Zbrane</a></li>
+        <li><a href="form.html">Kontakt</a></li>
       </ul>
     </nav>
   </header>
