--- a/index.html
+++ b/index.html
@@ -21,7 +21,34 @@
   </header>
 
   <main>
-    
+    <section>
+  <h1 style="text-align:center;">Čo je to D&D?</h1>
+  <p style="text-align:center;">
+    <strong>Dungeons & Dragons</strong> (skrátene D&D) je <em>stolová hra na hranie rolí</em>,
+    v ktorej <strong>nie ste len divákmi – ste hrdinami príbehu</strong>.
+    Predstavte si knihu, kde vy sami rozhodujete, čo sa stane ďalej.
+    Namiesto čítania ju <strong>spoločne píšete</strong> s kamarátmi pri jednom stole.
+  </p>
+
+  <h1 style="text-align:center;">Ako to funguje?</h1>
+  <ul style="text-align:center;">
+    <li>Jeden hráč sa stane <strong>Pánom jaskyne (Dungeon Master)</strong> – rozpráva príbeh, ovláda príšery a opisuje svet.</li>
+    <li>Ostatní si vytvoria <strong>svoje postavy</strong> (elfí lučištník, trpasličí kúzelník, ľudský zlodej…).</li>
+    <li>Rozprávate, čo chcete urobiť, hodíte kockami, a príbeh sa odvíja ďalej – <strong>žiadne dve hry nie sú rovnaké</strong>.</li>
+  </ul>
+
+  <h1 style="text-align:center;">Prečo to ľudia milujú?</h1>
+  <p style="text-align:center;">
+    D&D nie je o víťazstve alebo prehre. Je to o <strong>spolupráci, kreativite a zábave</strong>.
+    Môžete sa smiať, keď váš kúzelník omylom vystrelí ohnivú guľu do vlastnej party,
+    alebo oslavovať, keď konečne porazíte draka, ktorý terabil dedinu.
+  </p>
+
+  <p style="text-align:center;">
+    Potrebujete len <strong>papier, ceruzku, kocky a predstavivosť</strong>.
+    Zvyšok príde samo – a tento web vám ukáže, ako začať.
+  </p>
+</section>
   </main>
 
 </body>
