--- a/index.html
+++ b/index.html
@@ -24,25 +24,25 @@
     <section>
   <h1 style="text-align:center;">Čo je to D&D?</h1>
   <p style="text-align:center;">
-    <li><strong>Dungeons & Dragons</strong> (skrátene D&D) je <em>stolová hra</em>, v ktorej <strong>nie ste len divákmi – ste hrdinami príbehu</strong>.</li>
-    <li>Predstavte si knihu, kde vy sami rozhodujete, čo sa stane ďalej. Namiesto čítania ju <strong>spoločne píšete</strong> s kamarátmi pri jednom stole.</li>
+    <strong>Dungeons & Dragons</strong> (skrátene D&D) je <em>stolová hra</em>, v ktorej <strong>nie ste len divákmi – ste hrdinami príbehu</strong>.<br>
+    Predstavte si knihu, kde vy sami rozhodujete, čo sa stane ďalej. Namiesto čítania ju <strong>spoločne píšete</strong> s kamarátmi pri jednom stole.<br>
   </p>
 
   <h1 style="text-align:center;">Ako to funguje?</h1>
   <p style="text-align:center;">
-    <li>Jeden hráč sa stane <strong>Dungeon Master</strong> – rozpráva príbeh, ovláda príšery a opisuje svet.</li>
-    <li>Ostatní si vytvoria <strong>svoje postavy</strong> z rôznych klás a rás, v nekonečno kombináciách.</li>
-    <li>Rozprávate, čo chcete urobiť, hodíte kockami, a príbeh sa odvíja ďalej – <strong>žiadne dve hry nie sú rovnaké</strong>.</li>
+    Jeden hráč sa stane <strong>Dungeon Master</strong> – rozpráva príbeh, ovláda príšery a opisuje svet.<br>
+    Ostatní si vytvoria <strong>svoje postavy</strong> z rôznych klás a rás, v nekonečno kombináciách.<br>
+    Rozprávate, čo chcete urobiť, hodíte kockami, a príbeh sa odvíja ďalej – <strong>žiadne dve hry nie sú rovnaké</strong>.<br>
   </p>
 
   <h1 style="text-align:center;">Prečo to ľudia milujú?</h1>
   <p style="text-align:center;">
-    <li>D&D nie je o víťazstve alebo prehre. Je to o <strong>spolupráci, kreativite a zábave</strong>.</li>
-    <li>Môžete sa smiať, keď váš kúzelník omylom vystrelí ohnivú guľu do vlastnej party, alebo oslavovať, keď konečne porazíte draka, ktorý terabil dedinu.</li>
+    D&D nie je o víťazstve alebo prehre. Je to o <strong>spolupráci, kreativite a zábave</strong>.<br>
+    Môžete sa smiať, keď váš kúzelník omylom vystrelí ohnivú guľu do vlastnej party, alebo oslavovať, keď konečne porazíte draka, ktorý terabil dedinu.<br>
   </p>
 
   <p style="text-align:center;">
-    <li>Potrebujete len <strong>papier, ceruzku, kocky a predstavivosť</strong>. Všetko ostatné príde samo – a tento web vám ukáže, ako začať.</li>
+    Potrebujete len <strong>papier, ceruzku, kocky a predstavivosť</strong>. Všetko ostatné príde samo – a tento web vám ukáže, ako začať.<br>
   </p>
 </section>
   </main>
