--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <strong>Dungeons & Dragons</strong> (skrátene D&D) je <em>stolová hra</em>, v ktorej <strong>nie ste len divákmi – ste hrdinami príbehu</strong>.<br>
     Predstavte si knihu, kde vy sami rozhodujete, čo sa stane ďalej. Namiesto čítania ju <strong>spoločne píšete</strong> s kamarátmi pri jednom stole.<br>
   </p>
+  <img src="images/dragon.jpg" alt="Pribeh" width="800">
 
   <h1 style="text-align:center;">Ako to funguje?</h1>
   <p style="text-align:center;">
