--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
   <header>
-    <h1>Úvod do Dungeons & Dragons</h1>
+    <h1>Dungeons & Dragons</h1>
     <nav>
       <ul>
         <li><a href="index.html">Domov</a></li>
