--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         Ostatní si vytvoria <strong>svoje postavy</strong> z rôznych klás a rás, v nekonečno kombináciách.<br>
         Rozprávate, čo chcete urobiť, hodíte kockami, a príbeh sa odvíja ďalej – <strong>žiadne dve hry nie sú rovnaké</strong>.<br>
       </p>
+      <img src="images/dnd.jpg" alt="Boj" width="800">
     
       <h1>Prečo to ľudia milujú?</h1>
       <p>
