--- a/races.html
+++ b/races.html
@@ -21,7 +21,16 @@
   </header>
 
   <main>
-    
+    <div class="left">
+      <h1>Dragonborn</h1>
+      <p>
+      Predkovia dračorodených sa vyliahli z vajec chromatických a kovových drakov.<br>
+      Jedno rozprávanie hovorí, že tieto vajcia požehnali dračí bohovia Bahamut a Tiamat, ktorí chceli zaplniť multivesmír bytosťami stvorenými na svoj obraz.<br>
+      Iné zas tvrdí, že prví dračorodení boli stvorení samotnými drakmi bez požehnania bohov.<br>
+      Nech už je ich pôvod akýkoľvek, dračorodení si našli domov na Materiálnej sfére.<br>
+      Dračorodení vyzerajú ako dvojnohé, bezkrídle draky – šupinatí, jasnookí a robustnej postavy s rohmi na hlavách – a ich sfarbenie aj ďalšie črty pripomínajú ich dračích predkov.<br>
+      </p>
+    </div>
   </main>
 
 </body>
