--- a/races.html
+++ b/races.html
@@ -23,7 +23,7 @@
   <main>
     <div class="left">
       <h1>Dragonborn</h1>
-      <p>
+      <p>><img src="dragonborn.jpg" alt="Dragonborn" style="float:left;width:42px;height:42px;">
       Predkovia dračorodených sa vyliahli z vajec chromatických a kovových drakov.<br>
       Jedno rozprávanie hovorí, že tieto vajcia požehnali dračí bohovia Bahamut a Tiamat, ktorí chceli zaplniť multivesmír bytosťami stvorenými na svoj obraz.<br>
       Iné zas tvrdí, že prví dračorodení boli stvorení samotnými drakmi bez požehnania bohov.<br>
