--- a/races.html
+++ b/races.html
@@ -31,6 +31,19 @@
       Dračorodení vyzerajú ako dvojnohé, bezkrídle draky – šupinatí, jasnookí a robustnej postavy s rohmi na hlavách – a ich sfarbenie aj ďalšie črty pripomínajú ich dračích predkov.<br>
       </p>
     </div>
+
+    <div class="right">
+      <h1>Trpaslik</h1>
+      <p>
+        Trpaslíci boli v dávnych časoch povolaní zo zeme božstvom kovárne.<br>
+        Toto božstvo, ktoré má na rôznych svetoch rôzne mená – Moradin, Reorx a iné – darovalo trpaslíkom prirodzenú náklonnosť k kameňu a kovu a k životu pod zemou.<br>
+        Zároveň ich stvorilo odolných ako hory, s dĺžkou života približne 350 rokov.<br>
+        Nízki a často bradatí pôvodní trpaslíci vytesávali mestá a pevnosti do horských svahov a pod zem.<br>
+        Ich najstaršie legendy hovoria o konfliktoch s príšerami z horských štítov a Podtemna, či už to boli obrovití giganti alebo podzemné hrôzy.<br>
+        Inšpirovaní týmito príbehmi trpaslíci z každej kultúry často spievajú o hrdinských skutkoch – najmä o tom, ako malí dokázali premôcť mocných.<br>
+        Na niektorých svetoch multivesmíru boli prvé osídlenia trpaslíkov vybudované v kopcoch alebo horách a rodiny, ktoré odvodzujú svoj pôvod od týchto miest, sa nazývajú kopcoví trpaslíci alebo horskí trpaslíci. Takéto spoločenstvá existujú napríklad v prostrediach Greyhawku a Dragonlance.
+      </p>
+    </div>
   </main>
 
 </body>
