--- a/races.html
+++ b/races.html
@@ -23,12 +23,14 @@
   <main>
     <div class="left">
       <h1>Dragonborn</h1>
-      <p><img src="dragonborn.jpg" alt="Dragonborn" style="float:left;">
-      Predkovia dračorodených sa vyliahli z vajec chromatických a kovových drakov.<br>
-      Jedno rozprávanie hovorí, že tieto vajcia požehnali dračí bohovia Bahamut a Tiamat, ktorí chceli zaplniť multivesmír bytosťami stvorenými na svoj obraz.<br>
-      Iné zas tvrdí, že prví dračorodení boli stvorení samotnými drakmi bez požehnania bohov.<br>
-      Nech už je ich pôvod akýkoľvek, dračorodení si našli domov na Materiálnej sfére.<br>
-      Dračorodení vyzerajú ako dvojnohé, bezkrídle draky – šupinatí, jasnookí a robustnej postavy s rohmi na hlavách – a ich sfarbenie aj ďalšie črty pripomínajú ich dračích predkov.<br>
+      <p>
+      Predkovia dragonbornov sa vyliahli z vajec chromatických a kovových drakov.<br>
+      Jedno rozprávanie hovorí, že tieto vajcia požehnali dračí bohovia Bahamut a Tiamat,<br>
+      ktorí chceli zaplniť multivesmír bytosťami stvorenými na svoj obraz.<br>
+      Iné zas tvrdí, že prví dragonborn boli stvorení samotnými drakmi bez požehnania bohov.<br>
+      Nech už je ich pôvod akýkoľvek, dragonborni si našli domov na materiálnej sfére.<br>
+      Dragonborn vyzerá ako dvojnohý, bezkrídly drak – šupinatý, jasnooký a robustnej postavy s rohmi na hlave.<br>
+      Ich sfarbenie aj ďalšie črty pripomínajú ich dračích predkov.<br>
       </p>
     </div>
 
@@ -36,12 +38,16 @@
       <h1>Trpaslik</h1>
       <p>
         Trpaslíci boli v dávnych časoch povolaní zo zeme božstvom kovárne.<br>
-        Toto božstvo, ktoré má na rôznych svetoch rôzne mená – Moradin, Reorx a iné – darovalo trpaslíkom prirodzenú náklonnosť k kameňu a kovu a k životu pod zemou.<br>
+        Toto božstvo darovalo trpaslíkom prirodzenú náklonnosť ku kameňu a kovu a k životu pod zemou.<br>
         Zároveň ich stvorilo odolných ako hory, s dĺžkou života približne 350 rokov.<br>
         Nízki a často bradatí pôvodní trpaslíci vytesávali mestá a pevnosti do horských svahov a pod zem.<br>
-        Ich najstaršie legendy hovoria o konfliktoch s príšerami z horských štítov a Podtemna, či už to boli obrovití giganti alebo podzemné hrôzy.<br>
-        Inšpirovaní týmito príbehmi trpaslíci z každej kultúry často spievajú o hrdinských skutkoch – najmä o tom, ako malí dokázali premôcť mocných.<br>
-        Na niektorých svetoch multivesmíru boli prvé osídlenia trpaslíkov vybudované v kopcoch alebo horách a rodiny, ktoré odvodzujú svoj pôvod od týchto miest, sa nazývajú kopcoví trpaslíci alebo horskí trpaslíci. Takéto spoločenstvá existujú napríklad v prostrediach Greyhawku a Dragonlance.
+        Ich najstaršie legendy hovoria o konfliktoch s príšerami z horských štítov a Podtemna,<br>
+        či už to boli obrovití giganti alebo podzemné hrôzy.<br>
+        Inšpirovaní týmito príbehmi trpaslíci z každej kultúry často spievajú o hrdinských skutkoch,<br>
+        najmä o tom, ako malí dokázali premôcť mocných.<br>
+        Na niektorých svetoch multivesmíru boli prvé osídlenia trpaslíkov vybudované v kopcoch alebo horách a rodiny,<br>
+        ktoré odvodzujú svoj pôvod od týchto miest, sa nazývajú kopcoví trpaslíci alebo horskí trpaslíci.<br>
+        Takéto spoločenstvá existujú napríklad v prostrediach Greyhawku a Dragonlance.<br>
       </p>
     </div>
   </main>
