--- a/races.html
+++ b/races.html
@@ -22,6 +22,7 @@
 
   <main>
     <div class="race-section">
+      <img src="images/dragonborn.jpg" alt="Dragonborn">
       <div class="race-text">
         <h1>Dragonborn</h1>
         <p>
