--- a/races.html
+++ b/races.html
@@ -54,6 +54,7 @@
           Takéto spoločenstvá existujú napríklad v prostrediach Greyhawku a Dragonlance.<br>
         </p>
       </div>
+      <img src="images/dwarf.jpg" alt="Dwarf" style="width:200px;height:300px;">
     </div>
   </main>
 
