--- a/races.html
+++ b/races.html
@@ -21,7 +21,7 @@
   </header>
 
   <main>
-      <div class="race-section">
+      <div class="race-section right">
         <img src="images/dragonborn.jpg" alt="Dragonborn" style="width:200px;height:300px;">
         <div class="race-text">
           <h1>Dragonborn</h1>
