--- a/races.html
+++ b/races.html
@@ -38,7 +38,7 @@
       </div>
       
       <div class="race-section">
-        <div class="right">
+        <div class="race-text">
           <h1>Trpaslik</h1>
           <p>
             Trpaslíci boli v dávnych časoch povolaní zo zeme božstvom kovárne.<br>
@@ -55,6 +55,40 @@
           </p>
         </div>
         <img src="images/trpaslik.jpg" alt="Trpaslik" style="width:200px;height:300px;">
+      </div>
+
+      <div class="race-section right">
+        <img src="images/elf.jpg" alt="Elf" style="width:200px;height:300px;">
+        <div class="race-text">
+          <h1>Elf</h1>
+          <p>
+          Prvých elfov stvoril boh Corellon a tí dokázali podľa vôle meniť svoje podoby.<br>
+          Túto schopnosť však stratili, keď ich Corellon prekľal za to, že sa spolčili s bohyňou Lolth, ktorá sa neúspešne pokúsila uchvátiť jeho panstvo.<br>
+          Keď bola Lolth zvrhnutá do Priepasti, väčšina elfov ju zaprela a získala späť Corellonovo odpustenie, no to, čo im raz vzal, bolo navždy stratené.<br>
+          Bez schopnosti premieňať sa podľa vôle sa elfovia stiahli do Feywild, kde ich žiaľ ešte zosilnil vplyv tejto sféry.<br>
+          Časom ich však zvedavosť priviedla k preskúmavaniu ďalších sfér existencie, vrátane svetov Materiálnej sféry.
+          Elfovia majú špicaté uši a nemajú ochlpenie na tvári ani na tele. Dožívajú sa približne 750 rokov a nespia, ale namiesto toho upadajú do tranzu,<br>
+          keď potrebujú oddychovať. V tomto stave si zachovávajú vedomie o okolí, zatiaľ čo sa ponárajú do spomienok a meditácií.<br>
+          Prostredie, v ktorom elfovia žijú po tisícročia, ich jemne pretvára a udeľuje im isté druhy mágie.<br>
+          Drowovia, vysokí elfovia a lesní elfovia sú príkladmi elfov, ktorí sa takto premenili.<br>
+          </p>
+        </div>
+      </div>
+
+      <div class="race-section">
+        <div class="race-text">
+          <h1>Gnóm</h1>
+          <p>
+          Gnómovia sú magický národ stvorený bohmi vynálezov, ilúzií a podzemného života.<br>
+          Najstarších gnómov iné národy vídali len zriedkavo, a to kvôli ich utajenej povahe a sklonu žiť v lesoch a norách.<br>
+          To, čo im chýbalo na veľkosti, si vynahrádzali bystrosťou. Predátorov mátli pascami a spletitými tunelmi.<br>
+          Od bohov, ako boli Garl Glittergold, Baervan Wildwanderer a Baravar Cloakshadow, ktorí ich navštevovali v prestrojení, sa naučili čarodejníctvo.<br>
+          Táto mágia nakoniec vytvorila línie lesných a skalných gnómov.<br>
+          Gnómovia sú drobní, s veľkými očami a špicatými ušami, a dožívajú sa približne 425 rokov.<br>
+          Mnohí z nich majú radi pocit strechy nad hlavou – aj keď tou „strechou“ nie je nič viac než klobúk.<br>
+          </p>
+        </div>
+        <img src="images/gnome.jpg" alt="Gnome" style="width:200px;height:300px;">
       </div>
   </main>
 
