--- a/races.html
+++ b/races.html
@@ -58,7 +58,7 @@
       </div>
 
       <div class="race-section right">
-        <img src="images/elf.jpg" alt="Elf" style="width:200px;height:300px;">
+        <img src="images/elf2.jpg" alt="Elf" style="width:200px;height:300px;">
         <div class="race-text">
           <h1>Elf</h1>
           <p>
@@ -88,7 +88,7 @@
           Mnohí z nich majú radi pocit strechy nad hlavou – aj keď tou „strechou“ nie je nič viac než klobúk.<br>
           </p>
         </div>
-        <img src="images/gnome.jpg" alt="Gnome" style="width:200px;height:300px;">
+        <img src="images/gnome2.jpg" alt="Gnome" style="width:200px;height:300px;">
       </div>
   </main>
 
