--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <strong>Dungeons & Dragons</strong> (skrátene D&D) je <em>stolová hra</em>, v ktorej <strong>nie ste len divákmi – ste hrdinami príbehu</strong>.<br>
         Predstavte si knihu, kde vy sami rozhodujete, čo sa stane ďalej. Namiesto čítania ju <strong>spoločne píšete</strong> s kamarátmi pri jednom stole.<br>
       </p>
-      <img src="images/dragon.jpg" alt="Drak" width="800">
+      <img src="images/dragon.jpg" alt="Drak" width="800" border-radius:10px;>
     
       <h1>Ako to funguje?</h1>
       <p>
@@ -35,7 +35,7 @@
         Ostatní si vytvoria <strong>svoje postavy</strong> z rôznych klás a rás, v nekonečno kombináciách.<br>
         Rozprávate, čo chcete urobiť, hodíte kockami, a príbeh sa odvíja ďalej – <strong>žiadne dve hry nie sú rovnaké</strong>.<br>
       </p>
-      <img src="images/table.jpg" alt="Stol" width="800">
+      <img src="images/table.jpg" alt="Stol" width="800" border-radius:10px;>
     
       <h1>Prečo to ľudia milujú?</h1>
       <p>
@@ -43,7 +43,7 @@
         Môžete sa smiať, keď váš kúzelník omylom vystrelí ohnivú guľu do vlastnej party, alebo oslavovať, keď konečne porazíte draka, ktorý terabil dedinu.<br>
         Potrebujete len <strong>papier, ceruzku, kocky a predstavivosť</strong>. Všetko ostatné príde samo – a tento web vám ukáže, ako začať.<br>
       </p>
-      <img src="images/dnd.jpg" alt="Boj" width="800">
+      <img src="images/dnd.jpg" alt="Boj" width="800" style:border-radius:10px;>
     </div>
   </main>
 
