--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       <h1>Čo je to D&D?</h1>
       <p>
         <strong>Dungeons & Dragons</strong> (skrátene D&D) je <em>stolová hra</em>, v ktorej <strong>nie ste len divákmi – ste hrdinami príbehu</strong>.<br>
-        Predstavte si knihu, kde vy sami rozhodujete, čo sa stane ďalej. Namiesto čítania ju <strong>spoločne píšete</strong> s kamarátmi pri jednom stole.<br>
+        Predstavte si knihu, kde vy sami rozhodujete, čo sa stane ďalej.<br>
+        Namiesto čítania ju <strong>spoločne píšete</strong> s kamarátmi pri jednom stole.<br>
       </p>
       <img src="images/dragon.jpg" alt="Drak" width="800" style="border-radius:15px;">
     
