--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   </header>
 
   <main>
-    <div class="contents">
+    <div class="content">
       <div class="center">
         <h1>Čo je to D&D?</h1>
         <p>
