--- a/races.html
+++ b/races.html
@@ -21,6 +21,7 @@
   </header>
 
   <main>
+    <div class="content">
       <div class="race-section right">
         <img src="images/dragonborn.jpg" alt="Dragonborn" style="width:200px;height:300px;">
         <div class="race-text">
@@ -90,6 +91,7 @@
         </div>
         <img src="images/gnome2.jpg" alt="Gnome" style="width:200px;height:300px;">
       </div>
+     </div>
   </main>
 
 </body>
