--- a/races.html
+++ b/races.html
@@ -32,7 +32,8 @@
           ktorí chceli zaplniť multivesmír bytosťami stvorenými na svoj obraz.<br>
           Iné zas tvrdí, že prví dragonborn boli stvorení samotnými drakmi bez požehnania bohov.<br>
           Nech už je ich pôvod akýkoľvek, dragonborni si našli domov na materiálnej sfére.<br>
-          Dragonborn vyzerá ako dvojnohý, bezkrídly drak – šupinatý, jasnooký a robustnej postavy s rohmi na hlave.<br>
+          Dragonborn vyzerá ako dvojnohý, bezkrídly drak,<br>
+          šupinatý, jasnooký a robustnej postavy s rohmi na hlave.<br>
           Ich sfarbenie aj ďalšie črty pripomínajú ich dračích predkov.<br>
           </p>
         </div>
@@ -50,7 +51,7 @@
             či už to boli obrovití giganti alebo podzemné hrôzy.<br>
             Inšpirovaní týmito príbehmi trpaslíci z každej kultúry často spievajú o hrdinských skutkoch,<br>
             najmä o tom, ako malí dokázali premôcť mocných.<br>
-            Na niektorých svetoch multivesmíru boli prvé osídlenia trpaslíkov vybudované v kopcoch alebo horách a rodiny,<br>
+            Prvé osídlenia trpaslíkov boli vybudované v kopcoch alebo horách a rodiny,<br>
             ktoré odvodzujú svoj pôvod od týchto miest, sa nazývajú kopcoví trpaslíci alebo horskí trpaslíci.<br>
             Takéto spoločenstvá existujú napríklad v prostrediach Greyhawku a Dragonlance.<br>
           </p>
@@ -64,11 +65,15 @@
           <h1>Elf</h1>
           <p>
           Prvých elfov stvoril boh Corellon a tí dokázali podľa vôle meniť svoje podoby.<br>
-          Túto schopnosť však stratili, keď ich Corellon prekľal za to, že sa spolčili s bohyňou Lolth, ktorá sa neúspešne pokúsila uchvátiť jeho panstvo.<br>
-          Keď bola Lolth zvrhnutá do Priepasti, väčšina elfov ju zaprela a získala späť Corellonovo odpustenie, no to, čo im raz vzal, bolo navždy stratené.<br>
-          Bez schopnosti premieňať sa podľa vôle sa elfovia stiahli do Feywild, kde ich žiaľ ešte zosilnil vplyv tejto sféry.<br>
+          Túto schopnosť však stratili, keď ich Corellon prekľal za to, že sa spolčili s bohyňou Lolth,<br>
+          ktorá sa neúspešne pokúsila uchvátiť jeho panstvo.<br>
+          Keď bola Lolth zvrhnutá do Priepasti, väčšina elfov ju zaprela a získala späť Corellonovo odpustenie,<br>
+          no to, čo im raz vzal, bolo navždy stratené.<br>
+          Bez schopnosti premieňať sa podľa vôle sa elfovia stiahli do Feywild,<br>
+          kde ich žiaľ ešte zosilnil vplyv tejto sféry.<br>
           Časom ich však zvedavosť priviedla k preskúmavaniu ďalších sfér existencie, vrátane svetov Materiálnej sféry.
-          Elfovia majú špicaté uši a nemajú ochlpenie na tvári ani na tele. Dožívajú sa približne 750 rokov a nespia, ale namiesto toho upadajú do tranzu,<br>
+          Elfovia majú špicaté uši a nemajú ochlpenie na tvári ani na tele.<br>
+          Dožívajú sa približne 750 rokov a nespia, ale namiesto toho upadajú do tranzu,<br>
           keď potrebujú oddychovať. V tomto stave si zachovávajú vedomie o okolí, zatiaľ čo sa ponárajú do spomienok a meditácií.<br>
           Prostredie, v ktorom elfovia žijú po tisícročia, ich jemne pretvára a udeľuje im isté druhy mágie.<br>
           Drowovia, vysokí elfovia a lesní elfovia sú príkladmi elfov, ktorí sa takto premenili.<br>
@@ -83,7 +88,8 @@
           Gnómovia sú magický národ stvorený bohmi vynálezov, ilúzií a podzemného života.<br>
           Najstarších gnómov iné národy vídali len zriedkavo, a to kvôli ich utajenej povahe a sklonu žiť v lesoch a norách.<br>
           To, čo im chýbalo na veľkosti, si vynahrádzali bystrosťou. Predátorov mátli pascami a spletitými tunelmi.<br>
-          Od bohov, ako boli Garl Glittergold, Baervan Wildwanderer a Baravar Cloakshadow, ktorí ich navštevovali v prestrojení, sa naučili čarodejníctvo.<br>
+          Od bohov, ako boli Garl Glittergold, Baervan Wildwanderer a Baravar Cloakshadow,<br>
+          ktorí ich navštevovali v prestrojení, sa naučili čarodejníctvo.<br>
           Táto mágia nakoniec vytvorila línie lesných a skalných gnómov.<br>
           Gnómovia sú drobní, s veľkými očami a špicatými ušami, a dožívajú sa približne 425 rokov.<br>
           Mnohí z nich majú radi pocit strechy nad hlavou – aj keď tou „strechou“ nie je nič viac než klobúk.<br>
