--- a/races.html
+++ b/races.html
@@ -87,8 +87,10 @@
           <h1>Gnóm</h1>
           <p>
           Gnómovia sú magický národ stvorený bohmi vynálezov, ilúzií a podzemného života.<br>
-          Najstarších gnómov iné národy vídali len zriedkavo, a to kvôli ich utajenej povahe a sklonu žiť v lesoch a norách.<br>
-          To, čo im chýbalo na veľkosti, si vynahrádzali bystrosťou. Predátorov mátli pascami a spletitými tunelmi.<br>
+          Najstarších gnómov iné národy vídali len zriedkavo,<br>
+          a to kvôli ich utajenej povahe a sklonu žiť v lesoch a norách.<br>
+          To, čo im chýbalo na veľkosti, si vynahrádzali bystrosťou.<br>
+          Predátorov mátli pascami a spletitými tunelmi.<br>
           Od bohov, ako boli Garl Glittergold, Baervan Wildwanderer a Baravar Cloakshadow,<br>
           ktorí ich navštevovali v prestrojení, sa naučili čarodejníctvo.<br>
           Táto mágia nakoniec vytvorila línie lesných a skalných gnómov.<br>
