--- a/races.html
+++ b/races.html
@@ -73,8 +73,7 @@
           kde ich žiaľ ešte zosilnil vplyv tejto sféry.<br>
           Časom ich však zvedavosť priviedla k preskúmavaniu ďalších sfér existencie, vrátane svetov Materiálnej sféry.
           Elfovia majú špicaté uši a nemajú ochlpenie na tvári ani na tele.<br>
-          Dožívajú sa približne 750 rokov a nespia, ale namiesto toho upadajú do tranzu,<br>
-          keď potrebujú oddychovať.<br>
+          Dožívajú sa približne 750 rokov a nespia, ale namiesto toho upadajú do tranzu, keď potrebujú oddychovať.<br>
           V tomto stave si zachovávajú vedomie o okolí, zatiaľ čo sa ponárajú do spomienok a meditácií.<br>
           Prostredie, v ktorom elfovia žijú po tisícročia, ich jemne pretvára a udeľuje im isté druhy mágie.<br>
           Drowovia, vysokí elfovia a lesní elfovia sú príkladmi elfov, ktorí sa takto premenili.<br>
