--- a/races.html
+++ b/races.html
@@ -99,6 +99,51 @@
         </div>
         <img src="images/gnome2.jpg" alt="Gnome" style="width:200px;height:300px;">
       </div>
+
+      <div class="race-section right">
+        <img src="images/tiefling.jpg" alt="Tiefling" style="width:200px;height:300px;">
+        <div class="race-text">
+          <h1>Tiefling</h1>
+          <p>
+          Tieflingovia sa buď rodia v Nižších sférach, alebo majú démonických predkov, ktorí odtiaľ pochádzajú. Tiefling (vyslovuje sa TÍ-fling) je pokrvne spätý s diablom, démonom alebo iným Príšerom. Toto spojenie s Nižšími sférami predstavuje tieflingovo démonické dedičstvo, ktoré so sebou nesie prísľub moci, no nemá žiadny vplyv na jeho morálny postoj.
+          Tiefling si sám volí, či svoje démonické dedičstvo prijme, alebo ním bude zarmútený. Tri podoby tohto dedičstva sú opísané nižšie.
+          </p>
+        </div>
+      </div>
+
+      <div class="race-section">
+        <div class="race-text">
+          <h1>Ork</h1>
+          <p>
+          Orkovia odvodzujú svoj pôvod od Gruumsha, mocného boha, ktorý kedysi putoval rozľahlými priestormi Materiálnej sféry. Gruumsh obdaril svoje deti darmi, ktoré im mali pomôcť putovať po nekonečných stepiach, rozsiahlých jaskyniach a rozbúrených moriach a čeliť príšerám, ktoré tam číhajú. Aj keď svoju oddanosť obrátia k iným bohom, orkovia si Gruumshove dary zachovávajú: vytrvalosť, odhodlanie a schopnosť vidieť v tme.
+          Orkovia sú v priemere vysokí a zavalití. Majú sivú pokožku, uši so špicatými hrotmi a výrazné spodné špičáky pripomínajúce malé kly. Orcím mladíkom sa na niektorých svetoch rozprávajú príbehy o veľkých putovaniach a ťažkostiach ich predkov. Inšpirovaní týmito rozprávaniami mnohí z nich uvažujú, kedy ich Gruumsh povolá, aby vyrovnali hrdinské činy dávnych čias, a či si vyslúžia jeho priazeň. Iní orkovia sú spokojní, keď nechajú staré príbehy v minulosti a hľadajú vlastnú cestu.
+          </p>
+        </div>
+        <img src="images/orc.jpg" alt="Orc" style="width:200px;height:300px;">
+      </div>
+
+      <div class="race-section right">
+        <img src="images/halfling.jpg" alt="Halfling" style="width:200px;height:300px;">
+        <div class="race-text">
+          <h1>Hobit</h1>
+          <p>
+          Hobiti, milovaní a vedení bohmi, ktorí si cenia život, domov a rodinné krby, majú prirodzenú náklonnosť k idylickým útočiskám, kde ich život formuje rodina a spoločenstvo. Napriek tomu mnohí hobiti oplývajú odvážnym a dobrodružným duchom, ktorý ich vedie na cesty objavovania, dáva im možnosť spoznávať širší svet a nachádzať nových priateľov. Ich postava – veľkosťou podobná ľudskému dieťaťu – im umožňuje nenápadne prechádzať davom a pretlačiť sa aj cez úzke priestory.
+          Ktokoľvek, kto strávil čas medzi hobitmi, najmä medzi hobitími dobrodruhmi, sa pravdepodobne stal svedkom povestného „hobitieho šťastia“ v praxi. Keď sa hobit ocitne v smrteľnom nebezpečenstve, zdá sa, že neviditeľná sila zasiahne v jeho prospech. Mnohí hobiti veria v moc šťastia a tento nezvyčajný dar pripisujú jednému alebo viacerým svojim dobrotivým bohom, medzi ktorých patrí Yondalla, Brandobaris a Charmalaine. Rovnaký dar môže prispievať aj k ich dlhovekosti (približne 150 rokov).
+          </p>
+        </div>
+      </div>
+
+      <div class="race-section">
+        <div class="race-text">
+          <h1>Človek</h1>
+          <p>
+          Ľudia sa nachádzajú naprieč celým multivesmírom a sú takí rozmanití, ako sú početní. Usilujú sa dosiahnuť čo najviac počas rokov, ktoré im boli dané. Ich ambície a vynaliezavosť sú na mnohých svetoch obdivované, rešpektované, ale aj obávané.
+          Ľudia sú rozmanití vzhľadom rovnako ako obyvatelia Zeme a uctievajú mnohých bohov. Učenci sa sporia o pôvod ľudstva, no jedno z najstarších známych ľudských zhromaždení sa údajne odohralo v Sigile, toroidnom meste v srdci multivesmíru, kde vznikol spoločný jazyk. Odtiaľ sa ľudia mohli rozšíriť do všetkých kútov multivesmíru a so sebou priniesť kozmopolitného ducha Mesta dverí.
+          </p>
+        </div>
+        <img src="images/human.jpg" alt="Human" style="width:200px;height:300px;">
+      </div>
+      
      </div>
   </main>
 
